hmmdetection: Add support for tropodithietic acid like clusters
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -239,6 +239,10 @@
     @include secmet(black, tan, black);
 }
 
+.tropodithietic-acid {
+    @include secmet(black, tan, black);
+}
+
 .phenazine {
     @include secmet(black, plum, black);
 }
