html: make output less horrific for slow loading or missing CSS

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>{{page_title}} - {{regions_written}} region(s) - antiSMASH results</title>
+  <style>img {width: 20px; height: 20px;}</style>
   <link rel="stylesheet" type="text/css" href="css/{{options.taxon}}.css">
   <meta property="og:title" content="{{page_title}} - {{records | length}} record(s) - {{regions_written}} region(s)" />
   <meta property="og:description" content="{{options.html_description}}">
