html: use correct header border colour based on variant

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -103,7 +103,7 @@ nav {
     background-repeat: repeat-x;
     color: #e1e1e1;
     font-size: 14px;
-    border-bottom: 4px solid #810e15;
+    border-bottom: 4px solid $antismash-main;
     height: 50px;
     & a {
         background: none;
