html: fix header/footer images with overridden sizes

--- a/antismash/outputs/html/templates/header.html
+++ b/antismash/outputs/html/templates/header.html
@@ -2,7 +2,7 @@
     <div class="main-link">
      <div>
         <a href="{{options.base_url}}">
-          <img src="images/{{options.taxon}}_antismash_logo.svg" alt="antiSMASH logo" width="40px">
+          <img src="images/{{options.taxon}}_antismash_logo.svg" alt="antiSMASH logo" style="width:40px;height:unset;">
         </a>
        </div>
        <div>
