--- a/antismash/outputs/html/templates/footer.html
+++ b/antismash/outputs/html/templates/footer.html
@@ -1,13 +1,13 @@
   <footer class="footer">
     <div class="container">
       <div>
-        <img src="images/{{options.taxon}}_antismash_logo.svg" height="90px">
+        <img src="images/{{options.taxon}}_antismash_logo.svg" style="height:90px;width:unset;">
       </div>
       <div class="cite-me">
         If you have found antiSMASH useful, please <a href="{{options.base_url}}#!/about">cite us</a>.
       </div>
       <div>
-        <img src="images/{{options.taxon}}_antismash_icon.svg" height="100px">
+        <img src="images/{{options.taxon}}_antismash_icon.svg" style="height:100px;width:unset;">
       </div>
     </div>
   </footer>
