nrps_pks_domains,nrps_pks: add module identification and visualisation

--- a/antismash/detection/nrps_pks_domains/templates/details.html
+++ b/antismash/detection/nrps_pks_domains/templates/details.html
@@ -5,6 +5,7 @@
     </div>
     <div class="nrps-pks-domain-buttons">
       {{switch("Selected features only", "domains-selected-only")}}
+      {{switch("Show module domains", "show-module-domains", starts_on=hide_lids)}}
     </div>
     <div class="details-svg" id="{{region.anchor_id}}-details-svg"></div>
 </div>
