--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -758,6 +758,31 @@ table.region-table {
 .jsdomain-text {
     pointer-events: none;
 }
+.jsdomain-module {
+    fill: rgba(200, 200, 200, 0.5);
+    stroke-width: 1px;
+    stroke: #000;
+}
+.jsdomain-incomplete-module {
+    stroke-dasharray: 4 4;
+}
+
+.jsdomain-module-lid {
+    opacity: 1;
+    transition: opacity 1s;
+    &:hover {
+        opacity: 0;
+        transition: opacity 0s;
+    }
+    .jsdomain-module-lid-body {
+        filter: url(#inset-shadow);
+        stroke-width: 0px;
+        fill: rgb(240, 240, 240);
+    }
+    text {
+        @extend .jsdomain-text;
+    }
+}
 .jsdomain-svg {
     margin-bottom: -5px;
 }
