--- a/antismash/outputs/html/templates/legend_entry_macro.html
+++ b/antismash/outputs/html/templates/legend_entry_macro.html
@@ -5,6 +5,13 @@
     </div>
 {%- endmacro %}
 
+{% macro symbol_legend(css_class, description) -%}
+    <div class="button-like legend-selector" data-id="{{css_class}}">
+        <div class="legend-symbol">{{caller()}}</div>
+        <div class="legend-label">{{description}}</div>
+    </div>
+{%- endmacro %}
+
 {% macro static_legend(css_class, description) -%}
     <div class="legend-selector-static">
       <div class="legend-field {{css_class}}"></div>
