html: add hmm_detection strictness to overview page

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -47,10 +47,11 @@
   <!-- overview page -->
   {% if records %}
   <div class="page" id="overview">
+   {% set intro = "Identified secondary metabolite regions using strictness '{}'".format(options.hmmdetection_strictness) %}
    {% if options.triggered_limit %}
-     <h3>Identified secondary metabolite regions (truncated to the first {{options.limit}} record(s)) <span id="truncated"></span></h3>
+     <h3>{{intro}} (truncated to the first {{options.limit}} record(s)) <span id="truncated"></span></h3>
    {% else %}
-     <h3>Identified secondary metabolite regions<span id="truncated"></span></h3>
+     <h3>{{intro}}<span id="truncated"></span></h3>
    {% endif %}
    <div class="overview-layout">
     <div id="record-tables">
