html: use a serif font for CDS names

--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -14,7 +14,7 @@
       <dl class="details-text">
         {% for motif in results[locus] %}
           <dt>
-            {{motif.get_name()}} leader / core peptide
+            <span class="serif">{{motif.get_name()}}</span> leader / core peptide
           </dt>
           <dd>
             {{ motif.leader }}
