--- a/antismash/modules/nrps_pks/templates/monomers.html
+++ b/antismash/modules/nrps_pks/templates/monomers.html
@@ -5,7 +5,7 @@
     </div>
   <dl class="prediction-text">
     {% for gene_id in region.sidepanel_features if gene_id in relevant_features %}
-      <strong>{{gene_id}}</strong>: {{relevant_features[gene_id] | join(" - ")}}
+      <strong><span class="serif">{{gene_id}}</span></strong>: {{relevant_features[gene_id] | join(" - ")}}
       {{collapser_start(target=gene_id, level="cds")}}
       <dt></dt>
       {% if gene_id in region.url_strict %}
