html: add an option to start the overview in compact mode

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -84,7 +84,7 @@
     </div>
     {% if multi_record %}
     <div class="overview-switches">
-     {{switch("Compact view", "overview-switch-compact")}}
+     {{switch("Compact view", "overview-switch-compact", starts_on=options.html_start_compact)}}
     </div>
     {% endif %}
    </div>
