html: add Pfam visualisation

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -828,6 +828,53 @@ table.region-table {
     fill: rgb(218,218,218);
 }
 
+.pfam-domain-domain {
+    stroke: rgb(50,50,50);
+}
+
+.pfam-domain-line {
+    @extend .jsdomain-line;
+}
+.pfam-domain-orflabel {
+    @extend .jsdomain-orflabel;
+}
+.pfam-domain-tooltip {
+    @extend .jsdomain-tooltip;
+}
+.pfam-domain-text {
+    @extend .jsdomain-text;
+}
+.pfam-domain-svg {
+    @extend .jsdomain-svg;
+}
+.pfam-domain-svg-single {
+    @extend .jsdomain-svg-single;
+}
+
+rect.pfam-type-other {
+    fill: #dadada;
+}
+
+rect.pfam-type-biosynthetic {
+    fill: #f0a1a1;
+}
+
+text.pfam-type-biosynthetic {
+    fill: #333;
+}
+
+rect.pfam-type-regulatory {
+    fill: #6cbc9c;
+}
+
+text.pfam-type-regulatory {
+    fill: #333;
+}
+
+rect.pfam-type-transport {
+    fill: #7aaaff;
+}
+
 .clusterblast-locustag {
     @extend .serif;
     fill: $antismash-main;
