html: Allow downloading region SVGs
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -36,7 +36,7 @@ body {
     padding: 0;
 }
 
-a, .clipboard-copy {
+a, .clipboard-copy, .link-like {
     text-decoration: none;
     background-color: rgba(225, 225, 225, 0.9);
     border-radius: 2px;
