--- a/antismash/detection/nrps_pks_domains/templates/details.html
+++ b/antismash/detection/nrps_pks_domains/templates/details.html
@@ -2,6 +2,10 @@
     <div class="heading">
       <span>Detailed domain annotation</span>
       {{help_tooltip("Shows <a href='{0}glossary/#nrps' target='_blank'>NRPS</a>- and <a href='{0}glossary/#pks' target='_blank'>PKS</a>-related domains for each feature that contains them. Click on each domain for more information about the domain's location, consensus monomer prediction, and other details.<br>A glossary is available <a href='{0}modules/nrps_pks_domains/' target='_blank'>here</a>.".format(docs_url), "nrps-domain")}}
+      <div class="download-container">
+        <div class="download-icon download-svg" data-tag="{{region.anchor_id}}-details-svg" data-filename="{{record.id}}_{{region.anchor_id}}_nrps_pks.svg">
+        </div>
+      </div>
     </div>
     <div class="nrps-pks-domain-buttons">
       {{switch("Selected features only", "domains-selected-only")}}
