hmm_detection: Add cluster rule for pyrrolidines
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -287,6 +287,10 @@
     @include hydrocarbon;
 }
 
+.pyrrolidine {
+    @include hydrocarbon;
+}
+
 .unknown {
     @include secmet(black, #f2f2f2, black);
 }
