hmm_detection: Add detection rule new ranthipeptide cluster type
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -147,6 +147,10 @@
     @include RiPP;
 }
 
+.ranthipeptide {
+    @include RiPP;
+}
+
 @mixin thiolated_ripp {
     @include secmet(black, gold, black);
 }
