html: Lipolanthines are sort of lanthipeptides, so colour them like that
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -131,6 +131,10 @@
     @include lantibiotic;
 }
 
+.lipolanthine {
+    @include lantibiotic;
+}
+
 .RiPP-like {
     @include RiPP;
 }
@@ -196,10 +200,6 @@
 }
 
 .proteusin {
-    @include RiPP;
-}
-
-.lipolanthine {
     @include RiPP;
 }
 
