hmm_detection: detect lanthipeptide class already at cluster detection stage
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -123,11 +123,23 @@
     @include secmet(blue, #ffff77, blue);
 }
 
-.lanthipeptide {
+.lanthipeptide-class-i {
     @include lantibiotic;
 }
 
-.lanthidin {
+.lanthipeptide-class-ii {
+    @include lantibiotic;
+}
+
+.lanthipeptide-class-iii {
+    @include lantibiotic;
+}
+
+.lanthipeptide-class-iv {
+    @include lantibiotic;
+}
+
+.lanthipeptide-class-v {
     @include lantibiotic;
 }
 
