hmm_detection: Detect redox cofactors like PQQ and mycofactocin
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -167,6 +167,10 @@
     @include RiPP;
 }
 
+.redox-cofactor {
+    @include RiPP;
+}
+
 @mixin thiolated_ripp {
     @include secmet(black, gold, black);
 }
