hmm_detection: Add rule for cyclic lactone autoinducers
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -223,6 +223,10 @@
     @include RiPP;
 }
 
+.cyclic-lactone-autoinducer {
+    @include RiPP;
+}
+
 .blactam {
     @include secmet(black, aliceblue, black);
 }
