nrps_pks_domains: detect modules involving multiple CDS features

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -749,6 +749,10 @@ table.region-table {
 .jsdomain-text {
     pointer-events: none;
 }
+.jsdomain-match {
+    @extend .jsdomain-text;
+    font-size: 70%;
+}
 .jsdomain-module {
     fill: rgba(200, 200, 200, 0.5);
     stroke-width: 1px;
