--- a/antismash/modules/lanthipeptides/templates/details.html
+++ b/antismash/modules/lanthipeptides/templates/details.html
@@ -14,7 +14,7 @@
       <dl class="details-text">
         {% for motif in results[locus] %}
           <dt>
-            <span class="serif">{{motif.get_name()}}</span> leader / core peptide
+            <span class="serif">{{motif.get_name().rsplit("_", 1)[0]}}</span> leader / core peptide
           </dt>
           <dd>
             {{ motif.leader }}
