--- a/antismash/modules/sactipeptides/templates/sidepanel.html
+++ b/antismash/modules/sactipeptides/templates/sidepanel.html
@@ -7,7 +7,7 @@
   <dl class ="prediction-text">
   {% for motifs in results.values() %}
     {%- for motif in motifs -%}
-    <dt><span class="serif">{{motif.get_name()}}</span></dt>
+    <dt><span class="serif">{{motif.get_name().rsplit("_", 1)[0]}}</span></dt>
       <dd>Putative sactipeptide</dd>
       <dd>RODEO score: {{motif.score}}</dd>
       <dd>Core sequence, approximate: {{motif.core}}</dd>
