--- a/antismash/modules/thiopeptides/templates/sidepanel.html
+++ b/antismash/modules/thiopeptides/templates/sidepanel.html
@@ -6,7 +6,7 @@
   {% if cluster.motifs %}
   <dl class ="prediction-text">
   {% for motif in cluster.motifs %}
-     <dt>{{motif.locus_tag}}</dt>
+     <dt>{{motif.locus_tag.rsplit("_", 1)[0]}}</dt>
       <dd>Putative {{motif.peptide_subclass}}</dd>
         <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
         <dd>RODEO score: {{motif.detailed_information.rodeo_score}}</dd>
