--- a/antismash/modules/lassopeptides/templates/sidepanel.html
+++ b/antismash/modules/lassopeptides/templates/sidepanel.html
@@ -7,7 +7,7 @@
   <dl class ="prediction-text">
     {% for motifs in results.values() %}
     {%- for motif in motifs -%}
-    <dt><span class="serif">{{motif.get_name()}}</span> - {{motif.peptide_subclass}}</dt>
+    <dt><span class="serif">{{motif.get_name().rsplit("_", 1)[0]}}</span> - {{motif.peptide_subclass}}</dt>
       <dd>Cleavage pHMM score: {{'%0.2f' | format(motif.score)}}</dd>
       <dd>RODEO score: {{motif.detailed_information.rodeo_score}}</dd>
       <dd>Monoisotopic mass: {{'%0.1f' | format(motif.detailed_information.cut_mass)}} Da</dd>
