html: allow body detail divs to have scroll bars if necessary

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -1235,7 +1235,7 @@ ul.dropdown-options {
 
 .region-grid {
     display: grid;
-    grid-template-columns: auto 25%;
+    grid-template-columns: 75% 25%;
     grid-gap: 1px;
 }
 
