nrps_pks_domains: Also detect thiocysteine lyase domains as described in doi:10.1038/s41467-021-25798-8
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -827,6 +827,10 @@ table.region-table {
     stroke: rgb(10,160,76);
     fill: rgb(128,246,128);
 }
+.jsdomain-mod-sh {
+    stroke: gold;
+    fill: yellow;
+}
 .jsdomain-other {
     stroke: rgb(147,147,147);
     fill: rgb(218,218,218);
