--- a/antismash/outputs/html/templates/region_table_macros.html
+++ b/antismash/outputs/html/templates/region_table_macros.html
@@ -11,13 +11,19 @@
  </thead>
 {%- endmacro %}
 
+{% macro region_button(region, element_class) -%}
+    {% set classes = region.get_product_string() %}
+    {% if region.products | length > 1 %}
+        {% set classes = "hybrid" %}
+    {% elif region.products | length == 1 %}
+        {% set classes = classes + " " + region.get_unique_protoclusters()[0].product_category %}
+    {% endif %}
+    <{{element_class}} class="regbutton {{classes}} {{region.anchor_id}}">
+{%- endmacro %}
+
 {% macro region_row(region, cycle, record_index, options) -%}
    <tr class="linked-row {{cycle}}" data-anchor="#{{region.anchor_id}}">
-     {% set hybrid_text = "" %}
-     {% if region.products | length > 1 %}
-         {% set hybrid_text = "hybrid " %}
-     {% endif %}
-     <td class="regbutton {{region.get_product_string()}} {{hybrid_text}}{{region.anchor_id}}">
+     {{region_button(region, "td")}}
       <a href="#{{region.anchor_id}}">Region&nbsp{% if record_index %}{{record_index}}.{% endif %}{{region.get_region_number()}}</a>
      </td>
      <td>
